<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/respuesta"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="#673AB7"
            android:textSize="40sp"
            tools:text="Resultado" />

        <EditText
            android:id="@+id/numero_uno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_hint_numero"
            android:inputType="number" />

        <EditText
            android:id="@+id/numero_dos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_hint_numero"
            android:inputType="number" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sumar"
                    android:text="@string/btn_suma" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="restar"
                    android:text="@string/btn_resta" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:onClick="calcularLn"
                    android:text="@string/btn_log"
                    android:textAllCaps="false"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="multiplicar"
                    android:text="@string/btn_multi" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="dividir"
                    android:text="@string/btn_divide" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Button" />

            </TableRow>

        </TableLayout>

        <RadioGroup
            android:layout_width="344dp"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/check_exponente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="calcularExponente"
                android:text="@string/btnExpo"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txt_num_raiz"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_num_raiz"
                android:inputType="number"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rb_raiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb"
                android:textSize="24sp" />

        </RadioGroup>

        <Button
            android:id="@+id/button5"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:onClick="calcularRaiz"
            android:text="@string/btnRiaz"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_resultado"
            android:layout_width="335dp"
            android:layout_height="43dp"
            android:text="@string/txt_res_raiz"
            android:textSize="36sp" />

        <Spinner
            android:id="@+id/spinnerLn"
            android:layout_width="235dp"
            android:layout_height="59dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>